--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
+        <head>
+            <link href="style.css" rel="stylesheet">
+        </head>
         <header>
            <h3> Рыбы  </h3>
         </header>
