--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <head>
-            <link href="style.css" rel="stylesheet">
+            <link href="style/css" rel="stylesheet">
         </head>
         <header>
            <h3> Рыбы  </h3>
